--- a/final/style.css
+++ b/final/style.css
@@ -15,6 +15,7 @@ body{
     border: 1px solid lightgray;
     position: relative;
 }
+
 #start{
     font-size: 25px;
     font-weight: bolder;
@@ -37,17 +38,23 @@ body{
     color :rgb(134, 134, 255);
 }
 
-#qImg{
-    width : 200px;
-    height : 200px;
-    position: absolute;
-    left : 0px;
-    top : 0px;
-}
-#qImg img{
-    width : 200px;
-    height : 200px;
-    border-top-left-radius: 5px;
+#quizDone {
+
+    font-size: 25px;
+    font-weight: bolder;
+    padding:15px;
+    width:150px;
+    height:100px;
+    border : 2px solid lightgray;
+    text-align: center;
+    line-height: 100px;
+    cursor: pointer;
+    position: relative;
+    margin: 0 auto;
+    top: 100px;
+    color : lightgray;
+    border-radius: 10px;
+
 }
 
 #question{
@@ -153,4 +160,6 @@ body{
     font-weight: bold;
     text-align: center;
 }
+
+
 
