--- a/final/style.css
+++ b/final/style.css
@@ -39,22 +39,27 @@ body{
 }
 
 #quizDone {
-
     font-size: 25px;
-    font-weight: bolder;
     padding:15px;
-    width:150px;
-    height:100px;
-    border : 2px solid lightgray;
-    text-align: center;
-    line-height: 100px;
-    cursor: pointer;
+    width:400px;
+    height:400px;
     position: relative;
     margin: 0 auto;
-    top: 100px;
-    color : lightgray;
-    border-radius: 10px;
+    top: 80px;
+    color :black;
+}
 
+#scoreContainer{
+    margin : 20px auto;
+    position: relative;
+    display: none;
+}
+
+#scoreContainer p{
+    position: relative;
+    display: block;
+    font-weight: none;
+    font-size: 12px;
 }
 
 #question{
@@ -133,33 +138,7 @@ body{
     margin-left : 5px;
     margin-right : 5px;
 }
-#scoreContainer{
-    margin : 20px auto;
-    background-color: white;
-    opacity: 0.8;
-    height: 300px;
-    width : 700px;
-    border-radius: 5px;
-    box-shadow: 0px 5px 15px 0px;
-    position: relative;
-    display: none;
-}
-#scoreContainer img{
-    position: absolute;
-    top:100px;
-    left:325px;
-}
-#scoreContainer p{
-    position: absolute;
-    display: block;
-    width : 59px;
-    height :59px;
-    top:130px;
-    left:325px;
-    font-size: 1.5em;
-    font-weight: bold;
-    text-align: center;
-}
+
 
 
 
